fixed overflow gap

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 html {
   font-size: 62.5%;
-  overflow-x: initial;
 }
 
 body {
@@ -14,6 +13,10 @@ body {
   font-weight: 400;
   color: #555;
   overflow-x: hidden;
+}
+.wrapper {
+  overflow: hidden;
+  position: relative;
 }
 
 .heading-primary,
